--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/pe-icon-7-stroke.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/style.css">
+
+
 </head>
 <body>
 <header class="header">
@@ -47,21 +51,21 @@
 </section>
 <section class="skills">
 	<div class="skills__block"></div>
-		<div class="container absolut">
-			<h2 class="skills__h2">Professional Skills</h2>
-			<p class="skills__text">UI/UX Design    75%</p>
-			<div class="progressbar">
-				<span></span>
-			</div>
-			<p class="skills__text">web development    90%</p>
-			<div class="progressbar">
-				<span></span>
-			</div>
-			<p class="skills__text">marketing    65%</p>
-			<div class="progressbar">
-				<span></span>
-			</div>
+	<div class="container absolut">
+		<h2 class="skills__h2">Professional Skills</h2>
+		<p class="skills__text">UI/UX Design 75%</p>
+		<div class="progressbar">
+			<span></span>
 		</div>
+		<p class="skills__text">web development 90%</p>
+		<div class="progressbar">
+			<span></span>
+		</div>
+		<p class="skills__text">marketing 65%</p>
+		<div class="progressbar">
+			<span></span>
+		</div>
+	</div>
 
 </section>
 <section class="progress">
@@ -129,5 +133,30 @@
 		</div>
 	</div>
 </section>
+
+<section class="carusel">
+	<div class="container">
+
+		<div class="owl-carousel">
+			<p>“ Outstanding job and exceeded all expectations. It was a pleasure<br>
+				to work with them on a sizable first project and am looking<br>
+				forward to start the next one asap.”</p>
+			<p>“ Outstanding job and exceeded all expectations. It was a pleasure<br>
+				to work with them on a sizable first project and am looking<br>
+				forward to start the next one asap.”</p>
+			<p>“ Outstanding job and exceeded all expectations. It was a pleasure<br>
+				to work with them on a sizable first project and am looking<br>
+				forward to start the next one asap.”</p>
+		</div>
+	</div>
+</section>
+
+
+<script
+		src="https://code.jquery.com/jquery-2.2.4.min.js"
+		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+		crossorigin="anonymous"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/skripts.js"></script>
 </body>
 </html>
