--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
 	</div>
 </section>
 
+<section class="link-sponsors">
+	<div class="container link-sponsors__flex">
+		<a href="#"><img src="images/link1.png"></a>
+		<a href="#"><img src="images/link2.png"></a>
+		<a href="#"><img src="images/link3.png"></a>
+		<a href="#"><img src="images/link4.png"></a>
+		<a href="#"><img src="images/link5.png"></a>
+	</div>
+</section>
+
 
 <script
 		src="https://code.jquery.com/jquery-2.2.4.min.js"
