All values ​​are translated into rem

--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
 		<a href="#"><img src="images/link5.png"></a>
 	</div>
 </section>
+<section class="block-form">
+	<h2></h2>
+	<p>
 
+	</p>
+	<form method="post">
+
+
+	</form>
+</section>
 
 <script
 		src="https://code.jquery.com/jquery-2.2.4.min.js"
