--- a/index.html
+++ b/index.html
@@ -161,14 +161,28 @@
 	</div>
 </section>
 <section class="block-form">
-	<h2></h2>
-	<p>
-
+	<h2 class="block-form__h2">Need a Project?</h2>
+	<p class="block-form__text">
+		Let us know what you're looking for in an agency. We'll take a look and see<br>
+		if this could be the start of something beautiful.
 	</p>
-	<form method="post">
+	<div class="block-form__cont">
+		<form method="post">
+<div>
+			<input class="block-form__input" type="text" name="name" placeholder="Your Name">
 
 
-	</form>
+			<input class="block-form__input" type="email" name="email" placeholder="Your Email">
+</div>
+
+			<input class="block-form__input-title" type="text" name="title" placeholder="Your Title">
+
+
+			<textarea class="block-form__textarea" placeholder="Your Comment"></textarea>
+
+			<button class="block-form__button">send message</button>
+		</form>
+	</div>
 </section>
 
 <script
