--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
 	</p>
 	<div class="block-form__cont">
 		<form method="post">
-<div>
-			<input class="block-form__input" type="text" name="name" placeholder="Your Name">
+			<div>
+				<input class="block-form__input" type="text" name="name" placeholder="Your Name">
 
 
-			<input class="block-form__input" type="email" name="email" placeholder="Your Email">
-</div>
+				<input class="block-form__input" type="email" name="email" placeholder="Your Email">
+			</div>
 
 			<input class="block-form__input-title" type="text" name="title" placeholder="Your Title">
 
@@ -184,6 +184,37 @@
 		</form>
 	</div>
 </section>
+<footer class="footer">
+	<div class="container footer__flex">
+		<div class="footer__trademark">
+			<span>Piroll Design, Inc.</span>
+			<p>© 2017 Piroll. All rights reserved.<br>
+				Designed by robirurk.</p>
+		</div>
+		<div class="footer__contacts">
+			<p>hello@pirolltheme.com<br>
+				+44 987 065 908 </p>
+		</div>
+		<ul class="footer__links">
+			<li><a href="#">Projects</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Carreer</a></li>
+		</ul>
+		<ul class="footer__links">
+			<li><a href="#">News</a></li>
+			<li><a href="#">Events</a></li>
+			<li><a href="#">Contact</a></li>
+			<li><a href="#">Legals</a></li>
+		</ul>
+		<ul class="footer__links">
+			<li><a href="#">Facebook</a></li>
+			<li><a href="#">Twitter</a></li>
+			<li><a href="#">Instagram</a></li>
+			<li><a href="#">Dribbble</a></li>
+		</ul>
+	</div>
+</footer>
 
 <script
 		src="https://code.jquery.com/jquery-2.2.4.min.js"
